# Nidus-CLI

./: AUDIT_PLAN.md  CLAUDE.md  Cargo.toml  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_2.md  README.md  nest4d.json  nidus.json  release.ps1
.claude/commands/: implement.md  release.md  review.md  task.md  test.md
.claude/pipeline/: README.md
.github/workflows/: ci.yml  release.yml
meu_projeto/: meu_projeto.dpr  meu_projeto.dproj  meu_projeto.dsk  meu_projeto.identcache
meu_projeto/__history/: meu_projeto.dpr.~1~  meu_projeto.dpr.~2~  meu_projeto.dpr.~3~  meu_projeto.dpr.~4~  meu_projeto.dpr.~5~  meu_projeto.dpr.~6~
meu_projeto/src/: AppModule.dcu  AppModule.pas
meu_projeto/src/__history/: AppModule.pas.~1~
meu_projeto/src/modules/config/: ConfigController.dcu  ConfigController.pas  ConfigHandler.dcu  ConfigHandler.pas  ConfigInfra.dcu  ConfigInfra.pas  ConfigInterface.dcu  ConfigInterface.pas  ConfigModule.dcu  ConfigModule.pas  ConfigRepository.dcu  ConfigRepository.pas  ConfigService.dcu  ConfigService.pas
myproject/: myproject.dpr
src/: error.rs  lib.rs  main.rs  validation.rs
src/commands/: cmd_add_paths.rs  cmd_clean.rs  cmd_deps.rs  cmd_doctor.rs  cmd_gen.rs  cmd_init.rs  cmd_install.rs  cmd_new.rs  cmd_outdated.rs  cmd_remove.rs  cmd_template.rs  cmd_update.rs  mod.rs  template.rs
src/commands/command_trait/: cmd_trait.rs  mod.rs
src/commands/options/: mod.rs  option_info.rs  option_pattern.rs  option_template.rs
src/core/: core_add_paths_dproj.rs  core_add_unit_module.rs  core_add_unit_project.rs  core_dproj.rs  core_generate_module.rs  core_generate_project.rs  core_lockfile.rs  core_utils.rs  mod.rs
src/dto/: cmd_gen_dto.rs  cmd_init_dto.rs  cmd_install_dto.rs  cmd_new_dto.rs  config_global_dto.rs  lock_dto.rs  mod.rs
src/modules/config/: ConfigController.pas  ConfigHandler.pas  ConfigModule.pas  ConfigRepository.pas  ConfigService.pas
src/templates/: config.rs  mod.rs  processor.rs  template_manager.rs
src/templates/module/: controller.pas  handler.pas  infra.pas  interface.pas  module.pas  repository.pas  service.pas
src/templates/project/: app.module.pas  app_module.pas  project.dpr
testproject/: nest4d.json  testproject.dpr
testproject/src/: AppModule.pas
tests/: integration_tests.rs  validation_tests.rs
(+59 files in other folders)
