[package]
name = "nest4d"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.43", features = ["cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
colored = "3.0.0"
git2 = "0.20.2"
regex = "1.11.1"
walkdir = "2.5.0"
etree = "0.3.2"
pathdiff = "0.2.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
