[package]
name = "nidus"
version = "2.0.0"
edition = "2021"
description = "Nidus — a CLI code generator for Delphi projects using the Nidus IoC framework"
license = "MIT"
repository = "https://github.com/isaquepinheiro/Nidus-CLI"
homepage = "https://www.isaquepinheiro.com.br/nidus"
keywords = ["delphi", "codegen", "cli", "nidus", "ioc"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "Nidus"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.43", features = ["cargo", "derive"] }
clap_complete = "4.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
colored = "3.0.0"
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
regex = "1.11.1"
walkdir = "2.5.0"
xmltree = "0.10"
pathdiff = "0.2.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
